# rewardGym

./: .autorc  .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  environment_tests.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  rewardGym.py  rewardgym_psychopy.py  rockbottom.ipynb  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: environments.doctree  psychopy_stimuli.doctree
.doctrees/deepdive/: controlling_experiments.doctree  graph_structure.doctree  psychopy_stimuli.doctree  what_is_run_task.doctree  writing_agents.doctree
.doctrees/tasks/: gonogo.doctree  hcp.doctree  hcp_gambling.doctree  mid.doctree  posner.doctree  risk_sensitive.doctree  risksensitive.doctree  robotfactory.doctree  two_step.doctree  twostep.doctree
.doctrees/tutorials/: psychopy.doctree  tutorial.doctree
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: auto-label.yaml  auto-release.yaml  build-sphinx.yaml  pip-push.yaml  pip-tests.yaml
_downloads/20a2d41c13a12314cee84573c90a17b2/: risk_sensitive-1.py
_downloads/843e0e9a52cbc7f6a816430073fc45ef/: gonogo-1.py
_downloads/ab301dd0d921d85506dd4621758e8b2f/: posner-1.py
_downloads/bc25e1f011c8915c97a880a1ffb785d2/: two_step-1.py
_downloads/f2c4656f047ba5ad781dc66aa18e61d1/: mid-1.py
_modules/: index.html
_sources/: index.rst.txt
_sources/api/: environments.rst.txt  psychopy_stimuli.rst.txt
_sources/deepdive/: graph_structure.rst.txt  psychopy_stimuli.rst.txt  what_is_run_task.rst.txt  writing_agents.rst.txt
_sources/tasks/: gonogo.rst.txt  hcp.rst.txt  hcp_gambling.rst.txt  mid.rst.txt  posner.rst.txt  risk_sensitive.rst.txt  risksensitive.rst.txt  robotfactory.rst.txt  two_step.rst.txt  twostep.rst.txt
_sources/tutorials/: psychopy.rst.txt  tutorial.nblink.txt
_static/: documentation_options.js
api/: environments.html  psychopy_stimuli.html
assets/: __init__.py
assets/instructions/: gonogo_instructions.py  gonogo_instructions_cards.py  hcp_instructions.py  instructions.py  instructions_en.json  mid_instructions.py  posner_instructions.py  risksensitive_instructions.py  twostep_instructions.py  twostep_instructions_cards.py
deepdive/: controlling_experiments.html  graph_structure.html  psychopy_stimuli.html  what_is_run_task.html  writing_agents.html
docs/: api.rst  conf.py  hcp.rst  index.rst  references.bib  two_step.rst
docs/api/: psychopy_stimuli.rst
docs/deepdive/: controlling_experiments.rst  graph_structure.rst
docs/tasks/: gonogo.rst  hcp.rst  mid.rst  posner.rst  risk_sensitive.rst  two_step.rst
notebooks/: psychopy_example.py  tutorial.py
plot_directive/tasks/: gonogo-1.py  hcp-1.py  mid-1.py
rewardgym/: __init__.py  _version.py  base_env.py  condition_handler.py  gamble.py  grid.py  psychopy_core.py  psychopy_extras.py  render_env.py  reward_classes.py  stimuli.py  utils.py
rewardgym/agents/: __init__.py  base_agent.py  modelbased_agents.py  wrapper.py
rewardgym/assets/: instructions_en.json
rewardgym/environments/: __init__.py  base_env.py  gymnasium_stubs.py  psychopy_env.py  render_env.py  visualizations.py
rewardgym/handling/: data_tools.py
rewardgym/psychopy_render/: __init__.py  advanced_display.py  create_images.py  default_images.py  gonogo.py  gonogo_images.py  hcp.py  helper.py  logger.py  mid.py  posner.py  psychopy_display.py  psychopy_stubs.py  risk_sensitive.py  special_stimuli.py  stimuli.py  task_images.py  two_step.py  two_step_flip.py  utils.py
rewardgym/pygame_render/: __init__.py  hcp_stims.py  play_pygame.py  stimuli.py  task_stims.py
rewardgym/runner/: __init__.py  file_utils.py  psychopy_instructions.py  psychopy_plugins.py  psychopy_runner.py  psychopy_utils.py
rewardgym/stimuli/: __init__.py  advanced_shapes.py  alien_images.py  create_images.py  default_images.py  fixation_images.py  robot_images.py  spaceship_images.py
rewardgym/tasks/: __init__.py  _mid_abcd_order.py  gonogo.py  (+10 more)
taskdata/: .gitignore
tasks/: gonogo.html  hcp.html  hcp_gambling.html  mid.html  posner.html  risk_sensitive.html  risksensitive.html  robotfactory.html  two_step.html  twostep.html
tutorials/: psychopy.html  tutorial.html  tutorial.ipynb
(+22 files in other folders)
