[metadata]
name = rewardgym
version = 0.0.1
maintainer = Simon R. Steinkamp

[options]
python_requires = >=3.8
install_requires =
    gymnasium >= 0.29.1
    numpy>=1.23
    pygame>=2.5.2
    networkx>=3.1.2
    matplotlib
tests_require =
    pytest >=5.3
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx>=2.0
    sphinx-argparse
    sphinx_rtd_theme
    myst-parser
style =
    flake8>=4.0
    black<23.0.0
    isort<6.0.0
    pydocstyle
    codespell
test =
    %(style)s
    pytest >=5.3
    pytest-cov
    coverage
devtools =
    pre-commit
    jupyter
dev =
    %(devtools)s
    %(doc)s
    %(test)s

[options.entry_points]
console_scripts =
    rg_play=rewardgym.tasks.play_task:play_cli
[flake8]
doctest = True
exclude =
    _version.py
    ./rewardgym/tests/*
    versioneer.py
ignore = E126, E402, W503, F401, F811
max-line-length = 88
extend-ignore = E203, E501
extend-select = B950
per-file-ignores =
    workflow.py:D401

[isort]
profile = black
skip_gitignore = true
extend_skip =
    .autorc
    .coverage*
    .readthedocs.yml
    .zenodo.json
    codecov.yml
    setup.py
    versioneer.py
    rewardgym/_version.py
skip_glob =
    docs/*

[pydocstyle]
convention = numpy
match =
    rewardgym/*.py
match_dir = rewardgym/[^tests]*

[codespell]
skip = versioneer.py,.git,build,./docs/_build
ignore-words-list = nd,commun
write-changes =
count =
quiet-level = 3

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[coverage:run]
branch = True
omit =
    rewardgym/tests/*
    docs/*
    setup.py
    __init__.py
    */__init__.py
    */*/__init__.py
